# speculative-rag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
speculative-rag/src/: pipeline.py  pyproject.toml
speculative-rag/src/data/: loader.py  preprocess.py
speculative-rag/src/drafter/: README.md  batched_drafter.ipynb  batched_drafter.py  draft_output.ipynb  draft_output.py  drafter_pipeline.ipynb  drafter_pipeline.py  index.py  multi_perspective.py  retriever.py  run_tests.py  vllm_.ipynb  vllm_.py
speculative-rag/src/sampling/: index.py  multi_perspective.py  retriever.py
src/sampling/: index.py  multi_perspective.py  retriever.py
standard-rag/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
standard-rag/infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vertex_job.yaml.tpl
standard-rag/output/: results.json
standard-rag/scripts/: build_index.sh  download_data.sh  print_results.py  run_pipeline.sh
standard-rag/src/rag/: __init__.py  pipeline.py
standard-rag/src/rag/data/: loader.py  preprocess.py
standard-rag/src/rag/evaluation/: metrics.py
standard-rag/src/rag/generation/: __init__.py  prompts.py  vllm_server.py
standard-rag/src/rag/retrieval/: __init__.py  retriever.py
standard-rag/tests/: test_metrics.py  test_pipeline.py  test_retrieval.py
